--- a/styles.css
+++ b/styles.css
@@ -291,6 +291,8 @@ body {
     height: 64px;
     width: 64px;
     background-color: green;
+    /* temp */
+    display: none;
 }
 
 .libItem1Img {
@@ -343,6 +345,126 @@ body {
     height: auto;
     overflow-y: auto;
     display: none;
+}
+
+.rightSideBarContainer {
+    height: 100%;
+    width: 30.9vw;
+    background-color: #121212;
+    border-radius: 8px;
+    background-position: center;
+    background-size: cover;
+    display: none;
+    position: relative;
+}
+
+.blackCover {
+    height: 100%;
+    width: 100%;
+    border-radius: 8px;
+    background-color: rgba(18, 18, 18, .6);
+    transition: all .3s ease;
+
+    &:hover {
+        background-color: rgba(18, 18, 18, .0);
+    }
+}
+
+.rightBarTop {
+    height: 50px;
+    width: 95%;
+    position: absolute;
+    top: 5px;
+    left: 50%;
+    translate: -50% 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.topTitleBox {
+    align-content: center;
+    font-weight: bold;
+    font-size: .88rem;
+    cursor: pointer;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.topIconContainer {
+    height: 32px;
+    width: 80px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.topIconBox {
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+}
+
+.topIcons {
+    scale: .5;
+    fill: var(--iconDeactiveColor);
+    transition: all .1s ease;
+    cursor: pointer;
+
+    &:hover {
+        fill: #ffffff;
+        scale: .6;
+    }
+}
+
+.rightBarBottom {
+    height: auto;
+    width: 95%;
+    /* background-color: #2eb85c; */
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    translate: -50% 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.rightBarSongDetails {
+    display: grid;
+    grid-template: "pretitle pretitle"
+        "title title"
+        "badges subtitle" /auto 1fr;
+    column-gap: 8px;
+}
+
+.rightTitle{
+    grid-area: title;
+    font-weight: bold;
+    font-size: 1.5rem;
+    cursor: pointer;
+    &:hover{
+        text-decoration: underline;
+    }
+}
+
+.rightArtistBox{
+    grid-area: subtitle;
+    grid-column-start: badges;
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    color: var(--iconDeactiveColor);
+}
+
+.rightArtist{
+    cursor: pointer;
+    &:hover{
+        text-decoration: underline;
+        color: #ffffff;
+    }
 }
 
 .searchResultsHeading {
