--- a/styles.css
+++ b/styles.css
@@ -334,10 +334,278 @@ body {
     }
 }
 
+.stickyMainContainer {
+    height: 64px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    top: 0;
+}
+
+.stickyBox {
+    height: 100%;
+    width: 100%;
+    padding: 0 21px 0 21px;
+}
+
+.stickyContents {
+    height: 100%;
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: .8rem;
+    font-weight: 550;
+}
+
+.stickyButtons {
+    all: unset;
+    height: 32px;
+    border-radius: 50px;
+    background-color: rgba(255, 255, 255, .1);
+    text-align: center;
+    align-content: center;
+    transition: all .2s ease;
+    cursor: pointer;
+
+    &:focus {
+        background-color: #ffffff;
+        color: #000000;
+    }
+
+    &.stickyButtons:hover {
+        background-color: rgba(255, 255, 255, .15);
+    }
+}
+
+.allBox {
+    width: 40px;
+}
+
+.musicBox {
+    width: 61px;
+}
+
+.podcastsBox {
+    width: 81px;
+}
+
 .mainView {
     width: 100%;
-    height: 2000px;
+    height: auto;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    /* padding: 0 21px 0 21px; */
+    gap: 24px 32px;
+
+    /* scrollBar styling */
+    &::-webkit-scrollbar {
+        width: 12px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: none;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: hsla(0, 0%, 100%, .3);
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+        background: hsla(0, 0%, 100%, .5);
+    }
+
+    &::-webkit-scrollbar-thumb:active {
+        background: hsla(0, 0%, 100%, .7);
+    }
+}
+
+.userPlaylistContainer {
+    height: 64px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 12px;
+    overflow: hidden;
+    padding: 0 21px 0 21px;
+}
+
+.uPlaylistBox {
+    height: 100%;
+    width: 400px;
+    background-color: rgba(255, 255, 255, .1);
+    border-radius: 5px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+    font-weight: 600;
+    font-size: .9rem;
+    word-wrap: break-word;
+    position: relative;
+    transition: all .2s ease;
+    cursor: pointer;
+
+    &:hover {
+        background-color: rgba(255, 255, 255, .15);
+    }
+
+    &.uPlaylistBox:hover .playPlaylist {
+        display: block;
+    }
+}
+
+.uPlaylistImg {
+    height: 64px;
+    width: 64px;
+    border-radius: 5px 0 0 5px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, .5);
+}
+
+.playPlaylist {
+    height: 48px;
+    width: 48px;
+    border-radius: 50%;
+    background-color: #34d56a;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, .3);
+    position: absolute;
+    right: 8px;
+    display: none;
+    transition: all .1s ease;
+
+    &:hover {
+        scale: 1.05;
+        background-color: #49e27f;
+    }
+}
+
+.playPlaylistIcon {
+    scale: .4;
+}
+
+.shelfTitle {
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 0 21px 0 21px;
+    cursor: pointer;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.shelfCardContainer {
+    display: flex;
+    padding: 0 8px 0 8px;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar {
+        height: 5px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: none;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: hsla(0, 0%, 100%, 0);
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+        background: hsla(0, 0%, 100%, .5);
+    }
+
+    &::-webkit-scrollbar-thumb:active {
+        background: hsla(0, 0%, 100%, .7);
+    }
+
+    &:hover {
+        &::-webkit-scrollbar-thumb {
+            background: hsla(0, 0%, 100%, .3);
+        }
+    }
+}
+
+.shelfCard {
+    height: 300px;
+    width: 250px;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: all .2s ease;
+    cursor: pointer;
+
+    &:hover {
+        background-color: #1e1e1e;
+    }
+
+    &.shelfCard:hover .playCard{
+        display: block;
+    }
+}
+
+.shelfImg {
+    height: 75%;
+    min-height: 225px;
+    width: 90%;
+    min-width: 225px;
+    border-radius: 6px;
+    margin: 12px;
+    background-image: url(/libItem1.webp);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.playCard{
+    height: 48px;
+    width: 48px;
+    border-radius: 50%;
+    background-color: #34d56a;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, .3);
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    display: none;
+    transition: all .1s ease;
+
+    &:hover {
+        scale: 1.05;
+        background-color: #49e27f;
+    }
+    
+    &:active{
+        scale: 0.9;
+        background-color: #2dbb5c;
+    }
+}
+
+.playCardIcon{
+    scale: .4;
+}
+
+.shelfText {
+    width: 225px;
+    height: auto;
+    max-height: calc(100% - 225px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.cardTitle {
+    font-size: .9rem;
+    font-weight: 500;
+}
+
+.cardDesc {
+    font-size: .7rem;
+    font-weight: 400;
 }
 
 .searchView {
@@ -440,17 +708,18 @@ body {
     column-gap: 8px;
 }
 
-.rightTitle{
+.rightTitle {
     grid-area: title;
     font-weight: bold;
     font-size: 1.5rem;
     cursor: pointer;
-    &:hover{
+
+    &:hover {
         text-decoration: underline;
     }
 }
 
-.rightArtistBox{
+.rightArtistBox {
     grid-area: subtitle;
     grid-column-start: badges;
     display: flex;
@@ -459,9 +728,10 @@ body {
     color: var(--iconDeactiveColor);
 }
 
-.rightArtist{
+.rightArtist {
     cursor: pointer;
-    &:hover{
+
+    &:hover {
         text-decoration: underline;
         color: #ffffff;
     }
