--- a/styles.css
+++ b/styles.css
@@ -290,12 +290,16 @@ body {
 .libItem {
     height: 64px;
     width: 64px;
-    background-color: green;
+    border-radius: 6px;
+
     /* temp */
-    display: none;
+    /* display: none; */
+    &:hover {
+        background-color: rgba(255, 255, 255, 0.04);
+    }
 }
 
-.libItem1Img {
+.libItemImg {
     height: 48px;
     width: 48px;
     box-sizing: content-box;
@@ -786,7 +790,7 @@ body {
 .resultElements {
     height: 50px;
     width: 95%;
-    background-color: rgba(255,255,255,0.03);
+    background-color: rgba(255, 255, 255, 0.03);
     border-radius: 10px;
     display: flex;
     align-items: center;
